2006-11-05  Doug Hellmann  <dhellmann@racemi.com>

	* urls.py (urlpatterns): Add a url handler for /contact/ to go to
	the contact page view.

	* templates/base.html: Add a link to the contact page.

	* static/css/site.css (contactpage): Add styles for the contact page.

	* templates/base.html: If the user is staff, include a link to the
	admin site.

	* static/js/oneoffcast/user.js: When we add something to the
	queue, first make sure the "your queue is empty" message is no
	longer visible.

	* templates/base.html (clear_status): Use a counter to control
	whether we should really clear the status field so we can post
	multiple messages when the page loads.

	* static/js/oneoffcast/user.js (user_onload): Update the
	onload_counter so we can post status messages and not have the
	last one cleared until the page is fully loaded.

2006-11-05  Doug Hellmann  <dhellmann@racemi.com>

	* static/js/oneoffcast/user.js (user_onload): If the add_feed.url
	input field has a value when we load the page, call do_add_feed to
	add the feed to the user's subscriptions and show the feed contents.
	

2006-11-04  Doug Hellmann  <dhellmann@racemi.com>

	* static/css/site.css: Add styles for the podcast lists in the sidebar.

	* static/js/oneoffcast/user.js (do_add_to_queue): If we do not
	have an entry link for the item, use the enclosure link instead so
	there is *some* value.
	(populate_feed_viewer): Only show a link to the "item" if we have
	an item link.

	* static/js/oneoffcast/user.js
	(do_remove_feed): Initiate the calls to remove the feed from the
	list of subsccriptions for the user.

	* static/css/site.css (sidebar_r): Change float to right and
	increase the width to 24% to take up more of the available space.

2006-10-29  Doug Hellmann  <dhellmann@racemi.com>

	* static/js/oneoffcast/user.js (get_mimetype_icon): Function to
	produce a DOM node to be inserted as the icon based on a mimetype.
	(insert_entry_into_queue): Replace the text mimetype with an icon.